--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1410,7 +1410,7 @@
 			<key>7C436110-AB2A-4BBB-A880-FE41995C9F82</key>
 			<dict>
 				<key>boot-args</key>
-				<string>nv_disable=1 -v keepsyms=1 debug=0x100 npci=0x2000 alcid=1
+				<string>nv_disable=1 -v keepsyms=1 debug=0x100 agdpmod=vit9696 npci=0x2000 alcid=1
 </string>
 				<key>csr-active-config</key>
 				<data>5wMAAA==</data>
